--- a/src/assets/scss/resetVant.scss
+++ b/src/assets/scss/resetVant.scss
@@ -1,4 +1,3 @@
-
 h1,
 h2,
 h3,
@@ -10,6 +9,7 @@ h6 {
 p {
   margin-bottom: 0;
 }
+
 $bgColor: #77d2f7;
 .form_div {
   $color: #78d2f7 !global;
@@ -67,9 +67,11 @@ $bgColor: #77d2f7;
     padding: 0 5%;
     align-items: center;
   }
+  img {
+    vertical-align: inherit;
+  }
 }
 ._div {
-  
   .van-tab--active {
     color: $color;
   }
@@ -103,7 +105,6 @@ $bgColor: #77d2f7;
       display: none;
     }
   }
-
 }
 .top_bg {
   background: #e2f6fe;
@@ -120,7 +121,7 @@ $bgColor: #77d2f7;
     color: #fff;
     background: #77d2f7;
     position: relative;
-    h3{
+    h3 {
       color: #fff;
     }
     .waveBg {
@@ -143,4 +144,79 @@ $bgColor: #77d2f7;
 }
 .van-cell {
   width: auto;
+}
+.videoDetails {
+  .van-tabs__wrap {
+    border-bottom: solid 1px #f2f2f2;
+  }
+}
+.search {
+  .van-search {
+    background-color: transparent;
+  }
+}
+// 地图放大缩小按钮位置
+.leaflet-top.leaflet-left {
+  top: 15% !important;
+}
+.navigator {
+  .content {
+    .van-tabbar--fixed {
+      bottom: 8%;
+      border-bottom: solid 1px #f1f1f1;
+      padding-bottom: 19px;
+      .van-tabbar-item__text {
+        line-height: 1.5;
+        font-weight: 200;
+        color: #bcbcbc;
+      }
+      .van-tabbar-item--active {
+        .van-tabbar-item__text {
+          color: #00c8b0;
+          .time {
+            span {
+              color: #00c8b0;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+.van-overlay {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+.electronicMap {
+  .van-button {
+    background: #00d4c1;
+    border: solid 1px #00d4c1;
+  }
+  .van-tabbar {
+    border-top: solid 1px #f2f2f2;
+    .van-tabbar-item {
+      flex-direction: inherit;
+      font-size: 14px;
+      position: relative;
+      .van-tabbar-item__icon {
+        margin-right: 5px;
+      }
+    }
+    .van-tabbar-item::after {
+      content: "";
+      width: 1px;
+      height: 40px;
+      border-right: solid 1px #666;
+      position: absolute;
+      right: 0;
+      top: 5px;
+    }
+    .van-tabbar-item:nth-of-type(3)::after {
+      border: none;
+    }
+  }
+}
+.search_input{
+  .van-icon__image{
+    vertical-align: inherit;
+  }
 }
