路由模块化

--- a/src/assets/scss/resetVant.scss
+++ b/src/assets/scss/resetVant.scss
@@ -111,6 +111,8 @@ $bgColor: #77d2f7;
   position: fixed;
   width: 100%;
   height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
   .top {
     display: flex;
     flex-direction: column;
