--- a/src/assets/scss/resetVant.scss
+++ b/src/assets/scss/resetVant.scss
@@ -321,3 +321,14 @@ $color: #78d2f7;
 
 
 }
+
+.form_commit {
+  .van-cell {
+    padding: 12px 10px;
+
+    .van-cell__title {
+      text-align: left;
+    }
+  }
+
+}
