--- a/src/assets/scss/resetVant.scss
+++ b/src/assets/scss/resetVant.scss
@@ -332,3 +332,13 @@ $color: #78d2f7;
   }
 
 }
+
+.vjs-big-play-button {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  padding: 0;
+  margin: auto;
+}
